<resources>
    <string name="app_name">云收银</string>
    <string name="copyright">cardinfolink 2015</string>
    <string name="register_register">注册</string>
    <string name="register_next">提交</string>
    <string name="register_email">登录邮箱</string>
    <string name="register_invite_code">邀&#160;&#160;请&#160;&#160;码</string>
    <string name="register_optional">可选填</string>
    <string name="register_password">登录密码</string>
    <string name="register_hint_password">请填写登录密码</string>
    <string name="register_qr_password">确认密码</string>
    <string name="register_hint_qr_password">请确认密码</string>
    <string name="register_message">点击“注册”按钮，即表示您同意</string>
    <string name="register_message1">还差一步，您就可以正常使用了</string>
    <string name="register_message2">您还需要完善一下您的收款账户信息。</string>
    <string name="register_welcome_message">欢迎进入 互联网 + 收款时代</string>
    <string name="register_limit_message">恭喜，您已经可以收款了。目前限额500元/日，提升限额马上免费体验收款无上限！</string>
    <string name="register_use_now">立即使用</string>
    <string name="register_check">查看</string>
    <string name="register_cloud_version">云收银服务使用协议</string>
    <string name="register_hint_email">您的激活码将发送到此邮箱</string>
    <string name="register_next_finished">完成</string>
    <string name="register_next_hint_openbank">请输入您的开户行,精准到支行</string>
    <string name="register_next_hint_name">请输入您的姓名</string>
    <string name="register_next_hint_banknum">请输入您的银行卡号</string>
    <string name="register_next_hint_phonenum">请输入您的手机号</string>
    <string name="register_next_directions">       *请完善以下信息，才能正常使用收款功能。我们会将您的收款金额在2个工作日内清算到您的账户中（节假日不清算），费率为0.6%（即每交易100元收取手续费0.6元）。

*云收银将严格遵守国家相关法律法规，承诺不将您的账户信息以任何形式透露给第三方。</string>
    <string name="register_province_city">开户银行所在省、市（县）</string>
    <string name="register_bank_branch_bank">开户银行、分行</string>
    <string name="register_name">真实姓名</string>
    <string name="register_hint_name">银行账户的姓名</string>
    <string name="register_hint_bank_number">银行借记卡卡号</string>
    <string name="register_bank_number">银行账号</string>
    <string name="register_hint_phone_number">常用手机号码</string>
    <string name="register_phone_number">手机号码</string>
    <string name="detail_refd">交易退款</string>
    <string name="update_password">修改密码</string>
    <string name="update_password_hint_oldpwd">当前密码</string>
    <string name="update_password_hint_newpwd">新密码</string>
    <string name="update_password_hint_qr_newpwd">确认新密码</string>
    <string name="update_account">账号修改</string>
    <string name="qr_update">确认修改</string>
    <string name="increase_choose_type">请选择您的商户类型</string>
    <string name="increase_message">您可能需要准备一些相关材料</string>
    <string name="increase_company">我是企业</string>
    <string name="increase_personal">我是个体</string>
    <string name="increase_limit">提升限额</string>
    <string name="increase_material_requested">所需材料</string>
    <string name="increase_personal1">个体商户</string>
    <string name="increase_personal1_material">法人身份证\n营业执照</string>
    <string name="increase_company1">企业商户</string>
    <string name="increase_company1_meaterial">法人身份证\n企业营业执照\n税务登记证\n组织机构代码证</string>
    <string name="increase_i_know">我知道了</string>
    <string name="increase_message2">提升限额材料提交完成</string>
    <string name="increase_message3">您提交的材料，我们会在7个工作日内帮你审核。</string>
    <string name="limit_increase_message1">企业商户 提交材料</string>
    <string name="limit_increase_message">个体商户 提交材料</string>
    <string name="limit_increase_shop_name_hint">输入执照上的注册名称</string>
    <string name="limit_increase_shop_name">店铺名称</string>
    <string name="limit_increase_shop_address_hint">输入执照上的注册地址</string>
    <string name="limit_increase_shop_address">店铺地址</string>
    <string name="limit_increase_finish">完成</string>
    <string name="limit_increase">限额提升</string>
    <string name="limit_increase_directions">请确保上传的照片清晰完整且所有信息均真实有效</string>
    <string name="limit_increase_update_licence">上传证件</string>
    <string name="limit_increase_card_positive">法人身份证正面</string>
    <string name="limit_increase_card_negaitive">法人身份证反面</string>
    <string name="limit_increase_business_licence">营业执照</string>
    <string name="limit_increase_tax">税务登记证</string>
    <string name="limit_increase_organization">组织机构代码证</string>
    <string name="limit_increase_selected">已选择</string>
    <string name="limit_increase_unselected">未选择</string>
    <string name="limit_increase_upload_success">上传成功</string>
    <string name="limit_increase_upload_fail">上传失败</string>
    <string name="qr_commit">确认提交</string>
    <string name="dialog_trade_success">交易成功\n感谢购买！</string>
    <string name="dialog_trade_nopay">交易未支付,请支付后查询！</string>
    <string name="dialog_trade_fail">本次交易出错\n支付失败！</string>
    <string name="server_timeout">服务器超时，请检查网络！</string>
    <string name="username_password_error">用户名或密码错误！</string>
    <string name="press_again_exit">再按一次退出程序！</string>
    <string name="username_exist">用户名已存在！</string>
    <string name="activate_sentto_email">激活链接将发送到该邮箱:\n\n</string>
    <string name="viewfinder_message">将二维码/条形码放入框内</string>
    <string name="create_qrcode_activity_scancode">扫码支付</string>
    <string name="create_qrcode_activity_open_wx">请顾客打开微信“扫一扫”</string>
    <string name="create_qrcode_activity_open_ali">请顾客打开支付宝钱包“扫一扫”</string>
    <string name="create_qrcode_activity_open_message">请客户使用手机扫描</string>
    <string name="create_qrcode_activity_amount">本次收款金额：￥</string>
    <string name="create_qrcode_activity_trade_search">交易查询</string>
    <string name="detail_activity_busicd_canc">取消订单</string>
    <string name="detail_activity_busicd_pay">支付</string>
    <string name="detail_activity_busicd_refd">退款</string>
    <string name="detail_activity_trade_status_nopay">处理中</string>
    <string name="detail_activity_trade_status_success">支付成功</string>
    <string name="detail_activity_trade_status_partrefd">部分退款</string>
    <string name="detail_activity_trade_status_closed">已关闭</string>
    <string name="detail_activity_trade_status_allrefd">全额退款</string>
    <string name="detail_activity_trade_status_fail">失败</string>
    <string name="detail_activity_return">返回账单</string>
    <string name="detail_activity_pay_money">金额</string>
    <string name="detail_activity_pay_money1">原金额</string>
    <string name="detail_activity_pay_arrival_money">到账金额（不含手续费）</string>
    <string name="detail_activity_refd_money">退款金额（元）</string>
    <string name="detail_activity_card_discount">卡券折扣（元）</string>
    <string name="detail_activity_chcd">支付渠道</string>
    <string name="detail_activity_chcd_type1">微信</string>
    <string name="detail_activity_chcd_type2">支付宝</string>
    <string name="detail_activity_chcd_type3">开放接口</string>
    <string name="detail_activity_account">收银人员</string>
    <string name="detail_activity_terminator">操作终端</string>
    <string name="detail_activity_comments">备注摘要</string>
    <string name="detail_activity_check_code">校验码：</string>
    <string name="detail_activity_small_ticket_number">小票号：</string>
    <string name="detail_activity_pay_datetime">交易时间</string>
    <string name="detail_activity_order_number">订单编号</string>
    <string name="detail_activity_pay_type">收款工具</string>
    <string name="detail_activity_pay_type1">云收银桌面版</string>
    <string name="detail_activity_pay_type2">云收银安卓版</string>
    <string name="detail_activity_pay_type3">云收银iOS版</string>
    <string name="detail_activity_pay_type4">云收银收款码</string>
    <string name="detail_activity_pay_type5">云收银开放接口</string>
    <string name="detail_activity_close">关闭</string>
    <string name="detail_activity_veri_order_number">核销订单号</string>
    <string name="detail_activity_order_number1">支付订单号</string>
    <string name="detail_activity_coupon_chcd">卡券渠道</string>
    <string name="detail_activity_veri_datetime">核销时间</string>
    <string name="detail_activity_veri_type">核销工具</string>
    <string name="detail_activity_coupone_dikou">卡券抵扣</string>
    <string name="detail_activity_veri_success">核销成功</string>
    <string name="expandable_listview_group_separator">/</string>
    <string name="expandable_listview_group_imcome">收入：</string>
    <string name="expandable_listview_group_count">笔数：</string>
    <string name="expandable_listview_trade_status_nopay">处理中</string>
    <string name="expandable_listview_trade_status_success">成功</string>
    <string name="expandable_listview_trade_status_partrefd">部分退款</string>
    <string name="expandable_listview_trade_status_closed">已关闭</string>
    <string name="expandable_listview_trade_status_allrefd">全额退款</string>
    <string name="expandable_listview_trade_status_fail">失败</string>
    <string name="expandable_listview_pay_type1">Android</string>
    <string name="expandable_listview_pay_type2">收款码</string>
    <string name="expandable_listview_pay_type3">PC</string>
    <string name="expandable_listview_pay_type4">api</string>
    <string name="expandable_listview_pay_type5">iOS</string>
    <string name="alert_error_username_cannot_empty">用户名不能为空!</string>
    <string name="alert_error_password_cannot_empty">密码不能为空!</string>
    <string name="alert_error_email_cannot_empty">邮箱不能为空!</string>
    <string name="alert_error_email_format_error">邮箱格式不正确!</string>
    <string name="alert_error_password_too_short">密码不能小于8位</string>
    <string name="alert_error_password_too_long">密码不能多于30位!</string>
    <string name="alert_error_password_should_contain">密码必须包含大小写字母数字特殊字符中的两种!</string>
    <string name="alert_error_password_not_contain_number">密码必须包含数字!</string>
    <string name="alert_error_password_not_contain_uppercase">密码必须包含大写字母!</string>
    <string name="alert_error_password_not_contain_lowercase">密码必须包含小写字母!</string>
    <string name="alert_error_qrpassword_error">"确认密码不一致!"</string>
    <string name="alert_error_province_cannot_empty">开户行所在省份不能为空!</string>
    <string name="alert_error_city_cannot_empty">开户行所在城市不能为空!</string>
    <string name="alert_error_bank_cannot_empty">开户行不能为空!</string>
    <string name="alert_error_bankbranch_cannot_empty">开户支行不能为空!</string>
    <string name="alert_error_name_cannot_empty">姓名不能为空!</string>
    <string name="alert_error_banknum_cannot_empty">银行卡号不能为空!</string>
    <string name="alert_error_banknum_format_error">请输入正确的银行卡号!</string>
    <string name="alert_error_phonenum_cannot_empty">手机号不能为空!</string>
    <string name="setting_return">返回</string>
    <string name="setting_account_info">账户信息</string>
    <string name="setting_account_and_security">账户与安全</string>
    <string name="setting_modify_password">修改密码</string>
    <string name="setting_all_message">全部消息</string>
    <string name="setting_unread_message_list">未读消息列表</string>
    <string name="setting_set_all_message_read">全部置为已读</string>
    <string name="setting_please_input_origin_password">请输入原始密码</string>
    <string name="setting_origin_password">原始密码</string>
    <string name="setting_new_password">新的密码</string>
    <string name="setting_please_input_new_password">请输入新密码</string>
    <string name="setting_new_password1">确认密码</string>
    <string name="setting_please_input_new_password_again">请再次输入新密码</string>
    <string name="setting_confirm_modify">确认修改</string>
    <string name="pay_result_success">支付成功</string>
    <string name="pay_result_explain">您的余额不足 !</string>
    <string name="coupon_return">返回销券</string>
    <string name="coupon_order_number">核销订单号</string>
    <string name="coupon_pay_number">支付订单号</string>
    <string name="coupon_access">卡券渠道</string>
    <string name="coupon_use_time">核销时间</string>
    <string name="coupon_operate_terminal">操作终端</string>
    <string name="coupon_scan_code_again">重新扫码支付</string>
    <string name="coupon_original_sum">原金额:</string>
    <string name="coupon_discount">卡券抵扣:</string>
    <string name="coupon_account_receive_money">应到账金额(不含手续费):</string>
    <string name="config_activity_title">App配置</string>
    <string name="config_activity_git">git commit 信息</string>
    <string name="config_activity_server">server地址</string>
    <string name="config_activity_debug">debug开关</string>
</resources>