<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardinfolink="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <com.cardinfolink.yunshouyin.ui.SettingActionBarItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        cardinfolink:left_text="@string/setting_return"
        cardinfolink:title="@string/setting_modify_password" />

    <com.cardinfolink.yunshouyin.ui.SettingPasswordItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        cardinfolink:password_hint="@string/setting_please_input_origin_password"
        cardinfolink:title="@string/setting_origin_password" />

    <com.cardinfolink.yunshouyin.ui.SettingPasswordItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        cardinfolink:password_hint="@string/setting_please_input_new_password"
        cardinfolink:title="@string/setting_new_password" />

    <com.cardinfolink.yunshouyin.ui.SettingPasswordItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        cardinfolink:password_hint="@string/setting_please_input_new_password_again"
        cardinfolink:title="@string/setting_new_password1" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/white_selector"
            android:text="@string/setting_confirm_modify" />
    </RelativeLayout>

</LinearLayout>
