<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardinfolink="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.cardinfolink.yunshouyin.ui.SettingActionBarItem
            android:id="@+id/action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            cardinfolink:left_text="@string/setting_return"
            cardinfolink:title="@string/register_register" />


        <com.cardinfolink.yunshouyin.ui.SettingInputItem
            android:id="@+id/register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            cardinfolink:title="@string/register_email"
            cardinfolink:username_hint="@string/register_hint_email" />

        <com.cardinfolink.yunshouyin.ui.SettingPasswordItem
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            cardinfolink:password_hint="@string/register_hint_password"
            cardinfolink:title="@string/register_password" />

        <com.cardinfolink.yunshouyin.ui.SettingInputItem
            android:id="@+id/register_invite_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            cardinfolink:title="@string/register_invite_code"
            cardinfolink:username_hint="@string/register_optional" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnregister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/blue_selector"
                android:text="@string/register_register"
                android:textColor="@color/button_textcolor"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/register_message"
                android:textColor="@color/textview_textcolor_copyright1" />

            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register_cloud_version"
                android:textColor="@color/textview_textcolor_copyright" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:src="@drawable/logo" />

        </RelativeLayout>
    </LinearLayout>


    <include layout="@layout/showmoney_dialog" />

    <include layout="@layout/activate_dialog" />

    <include layout="@layout/yellow_tips_layout" />

</RelativeLayout>