<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardinfolink="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.cardinfolink.yunshouyin.ui.SettingActionBarItem
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cardinfolink:left_text="@string/setting_return"
            cardinfolink:title="@string/config_activity_title" />


        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/git"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cardinfolink:left_text="@string/config_activity_git" />

        <TextView
            android:id="@+id/git_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cardinfolink:left_text="@string/config_activity_server" />

        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cardinfolink:left_text="@string/config_activity_debug" />
    </LinearLayout>

</RelativeLayout>
