<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:coupon="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout"
    android:orientation="vertical">

    <com.cardinfolink.yunshouyin.ui.SettingActionBarItem
        android:id="@+id/sabi_coupon_action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        coupon:left_text="@string/coupon_return" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_coupon_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_result_success"
            android:textColor="@color/textview_textcolor_pay_success"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tv_coupon_fail_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/pay_result_explain"
            android:textColor="@color/textview_textcolor_coupon_result_explain"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_coupon_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/pay_result_explain"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_coupon_money_situation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/sii_coupon_original_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            coupon:left_text="@string/coupon_original_sum" />

        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/sii_coupon_coupon_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            coupon:left_text="@string/coupon_discount" />


        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/sii_coupon_account_receive_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            coupon:left_text="@string/coupon_account_receive_money" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/sii_coupon_order_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            coupon:left_text="@string/coupon_order_number" />


        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/sii_coupon_pay_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            coupon:left_text="@string/coupon_pay_number" />

        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/sii_coupon_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            coupon:left_text="@string/coupon_access" />


        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/sii_tv_coupon_use_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            coupon:left_text="@string/coupon_use_time" />

        <com.cardinfolink.yunshouyin.ui.ResultInfoItem
            android:id="@+id/sii_terminal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            coupon:left_text="@string/coupon_operate_terminal" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_coupon_scan_again"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_selector"
        android:text="@string/coupon_scan_code_again"
        android:textColor="@color/button_textcolor" />


</LinearLayout>
