<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardinfolink="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.cardinfolink.yunshouyin.ui.SettingActionBarItem
            android:id="@+id/action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            cardinfolink:left_text="@string/setting_return"
            cardinfolink:right_text="@string/setting_all_message"
            cardinfolink:title="@string/setting_unread_message_list" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/set_all_message_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_set_all_message_read" />


            <com.handmark.pulltorefresh.library.PullToRefreshListView
                android:id="@+id/unread_message_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/showmoney_dialog" />
</RelativeLayout>
